--- a/lottery_bet.html
+++ b/lottery_bet.html
@@ -357,28 +357,28 @@
                         </div>
 
                         <div class="grid grid-cols-2 md:grid-cols-3 md:p-5 mt-4 md:gap-0 gap-3 md:border border-slate-300 border-opacity-50 lottery_mybet_info rounded md:text-center">
-                            <div class="md:p-0 p-3 border md:border-r border-slate-300 md:border-slate-500 border-opacity-50 md:rounded-none rounded">
+                            <div class="md:p-0 p-3 border md:border-0 md:!border-r border-slate-300 md:border-slate-500 border-opacity-50 md:rounded-none rounded">
                                 <img class="md:block hidden w-8 mx-auto" src="/bcGame/dist/custom_img/lottery/total-tickets.png" alt="">
                                 <p class="mb-2 mt-1">총 티켓</p>
                                 <div class="md:block flex items-center justify-between text-tit text-2xl font-extrabold">
                                     0
-                                    <img class="w-8" src="/bcGame/dist/custom_img/lottery/total-tickets.png" alt="">
+                                    <img class="md:hidden block w-8" src="/bcGame/dist/custom_img/lottery/total-tickets.png" alt="">
                                 </div>
                             </div>
-                            <div class="md:p-0 p-3 border md:border-r border-slate-300 md:border-slate-500 border-opacity-50 md:rounded-none rounded">
+                            <div class="md:p-0 p-3 border md:border-0 md:!border-r border-slate-300 md:border-slate-500 border-opacity-50 md:rounded-none rounded">
                                 <img class="md:block hidden w-8 mx-auto" src="/bcGame/dist/custom_img/lottery/winner-tickets.png" alt="">
                                 <p class="mb-2 mt-1">총 우승 티켓</p>
                                 <div class="md:block flex items-center justify-between text-tit text-2xl font-extrabold">
                                     0
-                                    <img class="w-8" src="/bcGame/dist/custom_img/lottery/winner-tickets.png" alt="">
+                                    <img class="md:hidden block w-8" src="/bcGame/dist/custom_img/lottery/winner-tickets.png" alt="">
                                 </div>
                             </div>
-                            <div class="md:p-0 p-3 border md:border-none border-slate-300 md:border-slate-500 border-opacity-50 col-span-2 md:col-span-1 md:rounded-none rounded">
+                            <div class="md:p-0 p-3 border md:border-0 border-slate-300 md:border-slate-500 border-opacity-50 col-span-2 md:col-span-1 md:rounded-none rounded">
                                 <img class="md:block hidden w-8 mx-auto" src="/bcGame/dist/custom_img/lottery/total-price.png" alt="">
                                 <p class="mb-2 mt-1">총 상금 승리</p>
                                 <div class="md:block flex items-center justify-between text-primary text-2xl font-extrabold">
                                     0
-                                    <img class="w-8" src="/bcGame/dist/custom_img/lottery/total-price.png" alt="">
+                                    <img class="md:hidden block w-8" src="/bcGame/dist/custom_img/lottery/total-price.png" alt="">
                                 </div>
                             </div>
                         </div>
