--- a/affiliate.html
+++ b/affiliate.html
@@ -55,7 +55,96 @@
 
                 <div class="container pt-6 pb-20">
 
-                    <div></div>
+                    <div class="flex flex-col xl:flex-row-reverse gap-5 rounded">
+                        <div class="w-full xl:w-1/3 bg-stand">
+                            <div class="flex flex-col justify-evenly affiliate_visual2 text-tit p-5 text-sm md:text-base font-semibold">
+                                <p class="text-lg md:text-2xl font-bold">친구를 초대하고 보상받기:</p>
+                                <p><b class="text-yellow">₩1,295,485</b> 추천인 보상받기</p>
+                                <p><b class="text-yellow">25%</b> 커미션 보상</p>
+                            </div>
+                            <div class="py-4 md:py-9 px-3 md:px-5">
+                                <p class="text-tit font-bold text-xs md:text-sm">추천코드</p>
+                                <div class="flex items-center justify-between w-full mt-2 bg-back rounded">
+                                    <p class="px-3 text-tit">uopower04</p>
+                                    <button class="w-12 h-12 bg-backlight rounded"><svg class="w-4 h-4 mx-auto fill-white"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Copy"></use></svg></button>
+                                </div>
+
+                                <p class="mt-4 md:mt-7 text-tit font-bold text-xs md:text-sm">추천인 링크</p>
+                                <div class="flex items-center justify-between w-full mt-2 bg-back rounded">
+                                    <p class="px-3 text-tit">https://bc.game/i-uosdft04-n/</p>
+                                    <button class="w-12 h-12 bg-backlight rounded"><svg class="w-4 h-4 mx-auto fill-white"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Copy"></use></svg></button>
+                                </div>
+
+                                <div class="flex gap-4 mt-4">
+                                    <button class="flex items-center justify-center gap-1 w-1/2 btn-yellow h-12 md:h-14 font-bold text-xs md:text-sm">새 코드 발급 <svg class="w-4 h-4 fill-white"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_NewWindow"></use></svg></button>
+                                    <button class="w-1/2 h-12 md:h-14 bg-backlight rounded font-bold text-xs md:text-sm">소셜미디어로 공유하기</button>
+                                </div>
+
+                                <button class="flex items-center justify-end gap-1 w-full mt-4 text-right" data-tw-toggle="modal" data-tw-target="#referral_info-modal">레퍼럴 이용약관 <svg class="w-4 h-4 fill-basic"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Arrow"></use></svg></button>
+                            </div>
+                        </div>
+                        <div class="w-full xl:w-2/3 bg-stand p-3 md:p-5 rounded">
+                            <div class="flex items-center py-2 bg-back">
+                                <div class="flex items-center gap-3 w-1/2 px-4 md:px-2 border-r border-slate-500 border-opacity-50">
+                                    <img class="md:block hidden w-20" src="/bcGame/dist/custom_img/affiliate/trophy.png" alt="">
+                                    <p class="text-tit">
+                                        총 레퍼럴 수익:<br/>
+                                        <b class="text-yellow text-2xl">₩0</b>
+                                    </p>
+                                </div>
+                                <div class="flex items-center gap-3 w-1/2 px-4 md:px-2">
+                                    <img class="md:block hidden w-16" src="/bcGame/dist/custom_img/affiliate/usehead.png" alt="">
+                                    <p class="text-tit">
+                                        총 추천한 친구 수:<br/>
+                                        <b class="text-2xl">0</b>
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="flex items-center md:flex-row flex-col gap-3 md:gap-5 mt-3 md:mt-5">
+                                <div class="w-full md:w-1/2 bg-back rounded">
+                                    <div class="flex items-center justify-between h-12 md:h-16 px-3 bg-backlight rounded">
+                                        <p class="flex items-center gap-2 text-tit ">
+                                            <img class="w-5 md:w-8" src="/bcGame/dist/custom_img/affiliate/network.png" alt="">
+                                            <b class="text-xs md:text-sm">추천인 보상</b>
+                                        </p>
+                                        <button class="flex items-center gap-1 text-primary font-medium text-xs md:text-sm" data-tw-toggle="modal" data-tw-target="#referral_rule-modal">자세히 <svg class="w-4 h-4 fill-primary"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Arrow"></use></svg></button>
+                                    </div>
+                                    <div class="p-4">
+                                        <p class="py-5 text-center text-yellow text-lg md:text-2xl font-bold">₩0</p>
+                                        <button class="flex items-center justify-center gap-1 w-full py-2 bg-tab text-primary rounded font-medium text-xs md:text-sm">출금 <svg class="w-3 h-3 md:w-4 md:h-4 fill-primary"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_NewWindow"></use></svg></button>
+                                    </div>
+                                </div>
+                                <div class="w-full md:w-1/2 bg-back rounded">
+                                    <div class="flex items-center justify-between h-12 md:h-16 px-3 bg-backlight rounded">
+                                        <p class="flex items-center gap-2 text-tit ">
+                                            <img class="w-5 md:w-8" src="/bcGame/dist/custom_img/affiliate/discount.png" alt="">
+                                            <b class="text-xs md:text-sm">커미션 보상</b>
+                                        </p>
+                                        <button class="flex items-center gap-1 text-primary font-medium text-xs md:text-sm" data-tw-toggle="modal" data-tw-target="#commission_info-modal">자세히 <svg class="w-4 h-4 fill-primary"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Arrow"></use></svg></button>
+                                    </div>
+                                    <div class="p-4">
+                                        <p class="py-5 text-center text-yellow text-lg md:text-2xl font-bold">₩0</p>
+                                        <button class="flex items-center justify-center gap-1 w-full py-2 bg-tab text-primary rounded font-medium text-xs md:text-sm">출금 <svg class="w-3 h-3 md:w-4 md:h-4 fill-primary"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_NewWindow"></use></svg></button>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="mt-5">
+                                <div class="bg-backlight py-3 px-4 text-tit text-sm md:text-base font-bold rounded">보상 활동</div>
+                                <div class="overflow-y-auto h-40 bg-back scrollbar rounded">
+                                    <div class="flex flex-col justify-center pb-5 text-center">
+                                        <img class="w-44 mx-auto -mt-6" src="/bcGame/dist/custom_img/empty.webp">
+                                        <div class="-mt-6 text-basic opacity-70 text-xs md:text-sm">아직 초대한 친구가 없습니다! 지금 친구를 초대해 보세요.</div>
+                                    </div>
+                                </div>
+                            </div>
+                            <button class="flex items-center justify-center gap-1 btn-purple w-full h-16 mt-5 font-bold"> 
+                                <img class="w-4" src="/bcGame/dist/custom_img/affiliate/dashboard.png" alt="">
+                                대시보드로 이동 
+                                <svg class="w-4 h-4 fill-white"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_NewWindow"></use></svg>
+                            </button>
+                        </div>
+                        
+                    </div>
 
                     <div class="mt-8 flex items-center gap-2">
                         <span class="relative flex h-2.5 w-2.5">
