스포츠 내용 추가

--- a/sports.html
+++ b/sports.html
@@ -1055,8 +1055,8 @@
                                     </div>
                                     <div class="flex-1 flex text-center">
                                         <div class="flex bet_box" style="flex:3 1 0%">
-                                            <button class="flex-1 bet_btn">+200</button>
-                                            <button class="flex-1 bet_btn">+260</button>
+                                            <button class="flex-1 bet_btn up">+200</button>
+                                            <button class="flex-1 bet_btn down">+260</button>
                                             <button class="flex-1 bet_btn">+120</button>
                                         </div>
                                         <div class="2xl:flex hidden bet_box" style="flex:3 1 0%">
@@ -1282,16 +1282,23 @@
                                     <div class="w-48 flex items-center justify-between bet_info">
                                         <div class="p-2 cursor-pointer" onclick="window.location.href='/bcGame/sports_detail.html'">
                                             <div class="flex items-center gap-1 mb-1">
+                                                <i class="font-bold text-danger animate-opacity">LIVE</i>
                                                 <span class="mr-1 text-tit">05:00</span>
                                                 ID 5438849
                                             </div>
-                                            <div class="flex items-center gap-1 text-tit">
-                                                <img class="w-4 rounded-sm" src="/bcGame/dist/custom_img/sports/leipzig.webp" alt="">
-                                                RB Leipzig
+                                            <div class="flex items-center justify-between gap-1 text-tit">
+                                                <p class="flex items-center gap-1">
+                                                    <img class="w-4 rounded-sm" src="/bcGame/dist/custom_img/sports/leipzig.webp" alt="">
+                                                    RB Leipzig
+                                                </p>
+                                                <b>1</b>
                                             </div>
-                                            <div class="flex items-center gap-1 text-tit">
-                                                <img class="w-4 rounded-sm" src="/bcGame/dist/custom_img/sports/madrid.webp" alt="">
-                                                Real Madrid
+                                            <div class="flex items-center justify-between gap-1 text-tit">
+                                                <p class="flex items-center gap-1">
+                                                    <img class="w-4 rounded-sm" src="/bcGame/dist/custom_img/sports/madrid.webp" alt="">
+                                                    Real Madrid
+                                                </p>
+                                                <b>0</b>
                                             </div>
                                         </div>
                                         <button class="sports_like_btn shrink-0 bet_like_btn h-full px-1">
@@ -1301,64 +1308,64 @@
                                     </div>
                                     <div class="flex-1 flex text-center">
                                         <div class="flex bet_box" style="flex:3 1 0%">
-                                            <button class="flex-1 bet_btn">+200</button>
-                                            <button class="flex-1 bet_btn">+260</button>
-                                            <button class="flex-1 bet_btn">+120</button>
+                                            <button class="flex-1 bet_btn">-</button>
+                                            <button class="flex-1 bet_btn">-</button>
+                                            <button class="flex-1 bet_btn">-</button>
                                         </div>
                                         <div class="2xl:flex hidden bet_box" style="flex:3 1 0%">
-                                            <button class="flex-1 bet_btn">-150</button>
-                                            <button class="flex-1 bet_btn">-295</button>
-                                            <button class="flex-1 bet_btn">-375</button>
+                                            <button class="flex-1 bet_btn">-</button>
+                                            <button class="flex-1 bet_btn">-</button>
+                                            <button class="flex-1 bet_btn">-</button>
                                         </div>
                                         <div class="relative 2xl:flex hidden bet_box" style="flex:2 1 0%">
-                                            <button class="flex-1 bet_btn"><span>+0.5</span><br/>-150</button>
-                                            <button class="flex-1 bet_btn"><span>-0.5</span><br/>+115</button>
+                                            <button class="flex-1 bet_btn">-</button>
+                                            <button class="flex-1 bet_btn">-</button>
                                             <button class="bet_more_btn h-full"></button>
                                             <div class="absolute left-0 top-0 overflow-y-auto bet_more_box hidden shadow">
                                                 <div class="flex items-center">
-                                                    <button class="flex-1 bet_btn"><span>+0.5</span><br/>-150</button>
-                                                    <button class="flex-1 bet_btn"><span>-0.5</span><br/>+115</button>
+                                                    <button class="flex-1 bet_btn">-</button>
+                                                    <button class="flex-1 bet_btn">-</button>
                                                 </div>
                                                 <div class="flex items-center">
-                                                    <button class="flex-1 bet_btn"><span>+0.5</span><br/>-150</button>
-                                                    <button class="flex-1 bet_btn"><span>-0.5</span><br/>+115</button>
+                                                    <button class="flex-1 bet_btn">-</button>
+                                                    <button class="flex-1 bet_btn">-</button>
                                                 </div>
                                                 <div class="flex items-center">
-                                                    <button class="flex-1 bet_btn"><span>+0.5</span><br/>-150</button>
-                                                    <button class="flex-1 bet_btn"><span>-0.5</span><br/>+115</button>
+                                                    <button class="flex-1 bet_btn">-</button>
+                                                    <button class="flex-1 bet_btn">-</button>
                                                 </div>
                                                 <div class="flex items-center">
-                                                    <button class="flex-1 bet_btn"><span>+0.5</span><br/>-150</button>
-                                                    <button class="flex-1 bet_btn"><span>-0.5</span><br/>+115</button>
+                                                    <button class="flex-1 bet_btn">-</button>
+                                                    <button class="flex-1 bet_btn">-</button>
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="relative xl:flex hidden bet_box" style="flex:2 1 0%">
-                                            <button class="flex-1 bet_btn"><span>2.5</span><br/>-170</button>
-                                            <button class="flex-1 bet_btn"><span>2.5</span><br/>+125</button>
+                                            <button class="flex-1 bet_btn">-</button>
+                                            <button class="flex-1 bet_btn">-</button>
                                             <button class="bet_more_btn h-full"></button>
                                             <div class="absolute left-0 top-0 overflow-y-auto bet_more_box hidden shadow">
                                                 <div class="flex items-center">
-                                                    <button class="flex-1 bet_btn"><span>+0.5</span><br/>-150</button>
-                                                    <button class="flex-1 bet_btn"><span>-0.5</span><br/>+115</button>
+                                                    <button class="flex-1 bet_btn">-</button>
+                                                    <button class="flex-1 bet_btn">-</button>
                                                 </div>
                                                 <div class="flex items-center">
-                                                    <button class="flex-1 bet_btn"><span>+0.5</span><br/>-150</button>
-                                                    <button class="flex-1 bet_btn"><span>-0.5</span><br/>+115</button>
+                                                    <button class="flex-1 bet_btn">-</button>
+                                                    <button class="flex-1 bet_btn">-</button>
                                                 </div>
                                                 <div class="flex items-center">
-                                                    <button class="flex-1 bet_btn"><span>+0.5</span><br/>-150</button>
-                                                    <button class="flex-1 bet_btn"><span>-0.5</span><br/>+115</button>
+                                                    <button class="flex-1 bet_btn">-</button>
+                                                    <button class="flex-1 bet_btn">-</button>
                                                 </div>
                                                 <div class="flex items-center">
-                                                    <button class="flex-1 bet_btn"><span>+0.5</span><br/>-150</button>
-                                                    <button class="flex-1 bet_btn"><span>-0.5</span><br/>+115</button>
+                                                    <button class="flex-1 bet_btn">-</button>
+                                                    <button class="flex-1 bet_btn">-</button>
                                                 </div>
                                             </div>
                                         </div>
                                     </div> 
                                     <div class="w-12">
-                                        <button class="w-full bet_btn"><span>+212</span><br/></button>
+                                        <button class="w-full bet_btn"><span>+0</span><br/></button>
                                     </div>
                                 </div>
 
@@ -1366,6 +1373,7 @@
                                     <div class="w-48 flex items-center justify-between bet_info">
                                         <div class="p-2 cursor-pointer" onclick="window.location.href='/bcGame/sports_detail.html'">
                                             <div class="flex items-center gap-1 mb-1">
+                                                <i class="font-bold text-danger animate-opacity">LIVE</i>
                                                 <span class="mr-1 text-tit">05:00</span>
                                                 ID 5438849
                                             </div>
@@ -1385,14 +1393,14 @@
                                     </div>
                                     <div class="flex-1 flex text-center">
                                         <div class="flex bet_box" style="flex:3 1 0%">
-                                            <button class="flex-1 bet_btn">+200</button>
-                                            <button class="flex-1 bet_btn">+260</button>
-                                            <button class="flex-1 bet_btn">+120</button>
+                                            <button class="flex-1 bet_btn lock"><svg class="w-6 h-6 mx-auto fill-basic"><use xlink:href="/bcGame/dist/custom_img/sports-defs.svg#lock"></use></svg></button>
+                                            <button class="flex-1 bet_btn lock"><svg class="w-6 h-6 mx-auto fill-basic"><use xlink:href="/bcGame/dist/custom_img/sports-defs.svg#lock"></use></svg></button>
+                                            <button class="flex-1 bet_btn lock"><svg class="w-6 h-6 mx-auto fill-basic"><use xlink:href="/bcGame/dist/custom_img/sports-defs.svg#lock"></use></svg></button>
                                         </div>
                                         <div class="2xl:flex hidden bet_box" style="flex:3 1 0%">
-                                            <button class="flex-1 bet_btn">-150</button>
-                                            <button class="flex-1 bet_btn">-295</button>
-                                            <button class="flex-1 bet_btn">-375</button>
+                                            <button class="flex-1 bet_btn lock"><svg class="w-6 h-6 mx-auto fill-basic"><use xlink:href="/bcGame/dist/custom_img/sports-defs.svg#lock"></use></svg></button>
+                                            <button class="flex-1 bet_btn lock"><svg class="w-6 h-6 mx-auto fill-basic"><use xlink:href="/bcGame/dist/custom_img/sports-defs.svg#lock"></use></svg></button>
+                                            <button class="flex-1 bet_btn lock"><svg class="w-6 h-6 mx-auto fill-basic"><use xlink:href="/bcGame/dist/custom_img/sports-defs.svg#lock"></use></svg></button>
                                         </div>
                                         <div class="relative 2xl:flex hidden bet_box" style="flex:2 1 0%">
                                             <button class="flex-1 bet_btn"><span>+0.5</span><br/>-150</button>
